# inf1406-trab4

./: .gitignore  .rustc_info.json  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
