[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mosquitto-client = "0.1.5"
serde_json = "1.0.59"

[[bin]]
name = "daemon"
path = "server/src/main.rs"

[[bin]]
name = "client"
path = "client/src/main.rs"
